[package]
name = "bitdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rkyv = "0.7.38"
bincode = "1.3.3"
serde = { version ="1.0.137", features=["derive"] }
dashmap = "5.3.3"
sqlparser = "0.21.0"
openraft = "0.7.1"
async-trait = "0.1.57"
postgres-protocol="0.6.4"
tokio = { version = "1.26.0", features = ["full"] }
